# financial_view

./: .gitmodules  alembic.ini  main.py  models.py  pyproject.toml  settings.py  tables.py  utils.py
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 17d352d3850f_add_table_stock.py  1c8f79b573ff_add_users_stocks.py  2685da3770bd_add_column_verify_code_to_user.py  3bbf5ac5a225_add_stock.py  7cda2a48d41f_add_stocks_gold_list.py  8a259301c796_add_table_profile.py  99bf025c0ebb_add_user.py  9a1b9a8cd56d_add_uuid.py  e45b77fcdcf8_first_init.py  ebd4898b0010_add_stocks_table.py  f7757918744c_add_profiles_table.py
