[tool.poetry]
name = "financial-view"
version = "0.1.0"
description = "Financial View"
authors = ["riiy zhou <riiyzhou@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.33.0"
uvicorn = "^0.24.0.post1"
databases = {extras = ["asyncpg"], version = "^0.8.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
itsdangerous = "^2.1.2"
orjson = "^3.9.10"
pyotp = "^2.9.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
